feat: initial FastAPI + Gradio + Docker scaffold - Add FastAPI application structure with async patterns - Create database models (Users, ChatSessions, Messages, APIUsage) - Set up PostgreSQL with SQLAlchemy - Add basic Gradio chat interface - Configure Docker Compose for local development - Add requirements.txt with all dependencies - Successfully tested: app launches on localhost:8000

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,19 @@
-# OpenRouter API 
-OPENROUTER_API_KEY=your_key_here 
+# Application
+APP_NAME=LLM Chat Service
+ENVIRONMENT=development
+LOG_LEVEL=INFO
+SECRET_KEY=your_secret_key_here
+GRADIO_MOUNT_PATH=/ui
+DEFAULT_MODEL_NAME=openrouter/gpt-5.1-mini
+CORS_ORIGINS=http://localhost:3000,http://localhost:8000
 
-# Database 
-DATABASE_URL=postgresql://user:password@localhost:5432/chatdb 
+# OpenRouter API
+OPENROUTER_API_KEY=your_key_here
+OPENAI_API_KEY=optional
+ANTHROPIC_API_KEY=optional
 
-# Application 
-SECRET_KEY=your_secret_key_here 
-ENVIRONMENT=development 
-
-# Optional: Direct API keys for future use or contingency
-OPENAI_API_KEY=optional 
-ANTHROPIC_API_KEY=optional 
+# Database
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=chatdb
+DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/chatdb
